// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultipleCustomHooks should show the component successfully after fetch data 1`] = `
<DocumentFragment>
  <div>
    <h1
      data-testid="multiple-custom-hooks-h1"
    >
      Breaking Bad Quotes
    </h1>
    <hr />
    <blockquote
      class="blockquote text-right"
      data-testid="multiple-custom-hooks-block-quote"
    >
      <p
        class="mb-6"
        data-testid="multiple-custom-hooks-quote"
      >
         mock-quote 
      </p>
      <footer
        class="blockquote-footer"
        data-testid="multiple-custom-hooks-author"
      >
         mock-author 
      </footer>
    </blockquote>
    <button
      class="btn btn-primary m-3"
      data-testid="multiple-custom-hooks-prev-button"
    >
      Anterior frase
    </button>
    <button
      class="btn btn-primary"
      data-testid="multiple-custom-hooks-next-button"
    >
      Siguiente frase
    </button>
  </div>
</DocumentFragment>
`;

exports[`MultipleCustomHooks should show the component successfully with init values 1`] = `
<DocumentFragment>
  <div>
    <h1
      data-testid="multiple-custom-hooks-h1"
    >
      Breaking Bad Quotes
    </h1>
    <hr />
    <div
      class="alert alert-info text-center"
      data-testid="multiple-custom-hooks-loading"
    >
      Loading...
    </div>
    <button
      class="btn btn-primary m-3"
      data-testid="multiple-custom-hooks-prev-button"
    >
      Anterior frase
    </button>
    <button
      class="btn btn-primary"
      data-testid="multiple-custom-hooks-next-button"
    >
      Siguiente frase
    </button>
  </div>
</DocumentFragment>
`;
